nginx_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8-deployment
  annotations:
    kubernetes.io/change-cause: "Deployed nginx version 1.25.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-k8
  template:
    metadata:
      name: k8-pod
      labels:
        app: hello-k8
    spec:
      containers:
        - name: hello-k8
          image: paulbouwer/hello-kubernetes:1.10.1
          ports:
            - containerPort: 8080
