nginx_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    type: reverse-proxy
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
      ports:
        - containerPort: 80
