nginx_service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: hello-k8
  type: ClusterIP # default
  ports:
    - port: 8000
      targetPort: 8080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-service2
# spec:
#   selector:
#     app: nginx-proxy
#   type: NodePort
#   ports:
#     - port: 8000
#       targetPort: 80
#       nodePort: 30007 # range (30000 - 32767)
