hello_k8_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-cert"
    # cert-manager.io/cluster-issuer: "letsencrypt-cert" # When using cluster issuer
    # kubernetes.io/ingress.class: 'nginx'
  labels:
    type: reverse-proxy
spec:
  ingressClassName: nginx # Either this or above ingress.class annotation
  tls:
    - secretName: cert-tls
      hosts:
        - k8.shivamjha.com
  rules:
    - host: k8.shivamjha.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
              # For use with Keda Auto HTTP based Scaler
                # name: keda-add-ons-http-interceptor-proxy
                # port:
                #   number: 8080
              # For normal use with Service
                name: hello-k8-service
                port:
                  number: 8000
