nginx_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-cert"
    # kubernetes.io/ingress.class: 'nginx'
  labels:
    type: reverse-proxy
spec:
  ingressClassName: nginx # Either this or above ingress.class annotation
  tls:
    - secretName: cert-tls
      hosts:
        - k8.shivamjha.com
  rules:
    - host: k8.shivamjha.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8000
